# dev-toolkit

./: README.md  renovate.json
templates/common/: .editorconfig  LICENSE-MIT  renovate.json
templates/common/.github/: SECURITY.md  copilot-instructions.md
templates/dotnet/: .gitignore
templates/dotnet/.github/workflows/: ci.yml
templates/js/: .gitignore
templates/js/.github/workflows/: ci.yml
templates/python/: .gitignore  pyproject.toml
templates/python/.github/workflows/: ci.yml
