[project]
name = "{{PROJECT_NAME}}"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = []

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
